@@ -61,6 +61,7 @@
                 <configuration>
                     <source>14</source>
                     <target>14</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
